<resources>
    <string name="back_button_description">Back</string>
    <string name="destination_name">Mount Everest</string>
    <string name="location">Nepal</string>
    <string name="duration">3 days</string>
    <string name="name_label">Name:</string>
    <string name="traveler_name">Ann Press</string>
    <string name="travel_dates_label">Travel Dates:</string>
    <string name="travel_dates">December 15 - December 20</string>
    <string name="source_label">Source:</string>
    <string name="source">Los Angeles</string>
    <string name="number_of_people_label">Number of People:</string>
    <string name="total_people">4</string>
    <string name="male_count_label">Male Count:</string>
    <string name="female_count_label">Female Count:</string>
    <string name="male_count">2</string>
    <string name="female_count">2</string>
    <string name="budget_label">Budget:</string>
    <string name="budget">$1000</string>
    <string name="contact_info">Contact Info</string>
    <string name="back_button_text">Back</string>
    <string name="unlock_button_text">Unlock</string>
    <string name="title_travel_advice">Travel Advice</string>
    <string name="label_address">Address:</string>
    <string name="hint_enter_location">Enter location</string>
    <string name="label_date">Date:</string>
    <string name="hint_select_date">Select date</string>
    <string name="button_get_info">Get Info</string>
    <string name="title_weather_info">Weather Info</string>
    <string name="hint_travel_advice">Travel advice will be displayed here</string>
    <string name="app_name">TourGuys</string>
    <string name="logo">Logo</string>
    <string name="backgroundImage">backgroundImage</string>
    <string name="your_tour_guide_text">your_tour_guide_text</string>
    <string name="overlay_hexagon">overlay_hexagon</string>
    <string name="welcome">Welcome</string>
    <string name="your_tour_guide">Your Tour Guide</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_re_type_password">Re-Type Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">login</string>
    <string name="not_a_robot">Not a robot</string>
    <string name="back">Back</string>
    <string name="phone">Phone</string>
</resources>