...
        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/info_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            style="@style/ButtonStyle.tourGuys"
            android:text="Info"
            android:drawableEnd="@drawable/drawable_image"
            android:textColor="@android:color/white"
             />
    </LinearLayout>


...
