...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Back Button -->
<!--            <ImageButton-->
<!--                android:id="@+id/back_button"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:src="@drawable/ic_back_arrow"-->
<!--                android:background="@null"-->
<!--                android:contentDescription="@string/back_button_description" />-->

...
                android:textColor="@color/dark_text"
                android:textStyle="bold"
                android:layout_marginTop="4dp" />

            <!-- Contact Info Button -->
            <Button
                android:id="@+id/btn_contact_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_rectangle"
                android:text="@string/contact_info"
                android:textSize="18dp"
                android:drawableEnd="@drawable/drawable_image"
...
